# towr

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  jenkins-pipeline  package.xml
opt_solve/: CMakeLists.txt  package.xml
opt_solve/include/opt_solve/: bounds.h  composite.h  leaves.h  linear_constraint.h  nlp.h  problem.h  soft_constraint.h
opt_solve/src/: composite.cc  ipopt_adapter.cc  leaves.cc  linear_constraint.cc  nlp.cc  problem.cc  snopt_adapter.cc  soft_constraint.cc
opt_solve/test/: composite_test.cc  ex_problem.h  ex_test_ipopt.cc  ex_test_snopt.cc  problem1.cc  problem_test.cc  variables_test.cc
towr/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml
towr/cmake/: towr-config.cmake
towr/doc/: example.dox  mainpage.md  rosdoc.yaml
towr/include/towr/: height_map.h  nlp_factory.h  nlp_formulation.h  optimization_parameters.h  parameters.h  robot_model.h  towr.h
towr/matlab/: com_motion_derivatives.m  cubic_hermite_polynomial.m  differentiation.m  euler_converter.m  gap_height_map.m  integration.m  plot_rosbag.m  third_order_poly.m
towr/src/: angular_state_converter.cc  anymal_model.cc  base_motion_constraint.cc  base_nodes.cc  biped_gait_generator.cc  biped_model.cc  centroidal_model.cc  contact_schedule.cc  contact_schedule_observer.cc  dynamic_constraint.cc  dynamic_model.cc  euler_converter.cc  force_constraint.cc  gait_generator.cc  height_map.cc  height_map_examples.cc  hyq_model.cc  kinematic_model.cc  linear_constraint.cc  monoped_gait_generator.cc  monoped_model.cc  nlp_factory.cc  nlp_formulation.cc  node_cost.cc  node_spline.cc  node_values.cc  node_variables.cc  node_variables_all.cc  nodes.cc  nodes_observer.cc  nodes_variables.cc  nodes_variables_all.cc  nodes_variables_phase_based.cc  optimization_parameters.cc  parameters.cc  phase_durations.cc  phase_durations_observer.cc  phase_nodes.cc  phase_spline.cc  polynomial.cc  (+14 more)
towr/test/: centroidal_dynamics_test.cc  dynamic_constraint_test.cc  dynamic_model_test.cc  hopper_example.cc
towr_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
towr_core/cmake/: FindGTest.cmake  towr-config.cmake
towr_core/include/towr/: height_map.h  nlp_factory.h  parameters.h  robot_model.h  towr.h
towr_core/src/: base_motion_constraint.cc  centroidal_model.cc  dynamic_constraint.cc  dynamic_model.cc  euler_converter.cc  nlp_factory.cc  node_spline.cc  nodes.cc  parameters.cc  phase_durations_observer.cc  range_of_motion_constraint.cc  spline.cc  spline_acc_constraint.cc  state.cc  swing_constraint.cc  terrain_constraint.cc  time_discretization_constraint.cc  total_duration_constraint.cc
towr_core/test/: centroidal_dynamics_test.cc  dynamic_constraint_test.cc  gtest_main.cc  hopper_example.cc
towr_examples/: CHANGELOG.rst  CMakeLists.txt  example.cc  package.xml
towr_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
towr_ros/bags/: play_all.sh  playbag.sh
towr_ros/bash/: README.md  playbag.sh  remap_bag.sh
towr_ros/include/towr_ros/: biped_gait_generator.h  gait_generator.h  height_map_examples.h  monoped_gait_generator.h  nlp_optimizer_node.h  param_server.h  quadruped_gait_generator.h  rviz_terrain_builder.h  topic_names.h  towr_ros.h  towr_ros_interface.h  towr_user_interface.h  towr_xpp_ee_map.h  user_interface.h
towr_ros/launch/: towr.launch  towr_all.launch  towr_anymal.launch  towr_core.launch  towr_nodes.launch  towr_params.launch  towr_ros.launch  towr_sim.launch  towr_vis.launch
towr_ros/msg/: TowrCommand.msg
towr_ros/rviz/: xpp_towr.rviz
towr_ros/src/: anymal_model.cc  biped_gait_generator.cc  biped_model.cc  gait_generator.cc  goal_pose_publisher.cc  height_map_examples.cc  hyq_model.cc  monoped_gait_generator.cc  monoped_model.cc  nlp_optimizer_node.cc  quadruped_gait_generator.cc  rosbag_geom_msg_extractor.cc  rosbag_traj_combiner.cc  rviz_terrain_builder.cc  rviz_terrain_publisher.cc  towr_app.cc  towr_ros.cc  towr_ros_app.cc  towr_ros_interface.cc  towr_user_interface.cc  user_interface.cc
towr_ros/src/exe/: goal_pose_publisher.cc  nlp_optimizer_node_exe.cc  rosbag_geom_msg_extractor.cc  rosbag_traj_combiner.cc  rviz_terrain_node.cc  towr_ros_interface_exe.cc  user_interface_node.cc
xpp_opt/: CMakeLists.txt  package.xml
xpp_opt/cmake/: FindIPOPT.cmake
xpp_opt/include/xpp/: angular_state_converter.h  composite.h  cost_constraint_factory.h  height_map.h  motion_optimizer_facade.h  nlp.h  nlp_bound.h  optimization_parameters.h  polynomial.h
xpp_opt/include/xpp_opt/: angular_state_converter.h  cost_constraint_factory.h  height_map.h  motion_optimizer_facade.h  nlp_factory.h  optimization_parameters.h  polynomial.h  towr.h
xpp_opt/matlab/: center_of_pressure.m  com_motion_derivatives.m  lip.m
xpp_opt/src/: angular_state_converter.cc  base_motion_constraint.cc  biped_gait_generator.cc  centroidal_model.cc  coeff_spline.cc  composite.cc  contact_schedule.cc  cost_constraint_factory.cc  dynamic_constraint.cc  dynamic_model.cc  force_constraint.cc  gait_generator.cc  height_map.cc  ipopt_adapter.cc  kinematic_model.cc  linear_constraint.cc  monoped_gait_generator.cc  motion_optimizer_facade.cc  nlp.cc  nlp_factory.cc  node_cost.cc  node_values.cc  optimization_parameters.cc  phase_nodes.cc  polynomial.cc  quadruped_gait_generator.cc  range_of_motion_constraint.cc  robot_model.cc  snopt_adapter.cc  soft_constraint.cc  spline.cc  spline_constraint.cc  swing_constraint.cc  terrain_constraint.cc  time_discretization_constraint.cc  total_duration_constraint.cc  towr.cc
xpp_opt/src/depr/: com_polynomial_helpers.cc  com_spline4.cc  contact_load_constraint.cc  convexity_constraint.cc  endeffectors_motion.cc  foothold_constraint.cc  motion_parameter_instances.cc  obstacle_constraint.cc  optimization_variables.cc  polygon_center_constraint.cc  spline.cc
xpp_opt/test/: centroidal_dynamics_test.cc
xpp_opt/test/google/: ee_motion_test.cc  (+9 more)
xpp_solve/: CMakeLists.txt  package.xml
xpp_solve/src/: composite.cc  ipopt_adapter.cc  leaves.cc  linear_constraint.cc  nlp.cc  snopt_adapter.cc  soft_constraint.cc
xpp_solve/test/: problem1.cc
(+890 files in other folders)
