<?xml version="1.0"?>
<package format="2">
  <name>opt_solve</name>
  <version>0.0.0</version>
  <description>
    Provides a unified <a href="http://eigen.tuxfamily.org">Eigen-</a>based 
    interface to use Nonlinear Programming solvers such as 
    <a href="https://projects.coin-or.org/Ipopt">Ipopt-</a> or
    <a href="http://ampl.com/products/solvers/solvers-we-sell/snopt/">Snopt-</a>.
  </description>

  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>

</package>
